Revert "HTML pages"

--- a/soc_courses_review/templates/socs_reviewer/about.html
+++ b/soc_courses_review/templates/socs_reviewer/about.html
@@ -14,7 +14,7 @@
 	<body>
 
 		<strong>{{ boldmessage }}</strong><br />
-		<a href="/socs_reviewer/about/">About</a><br />
+		<a href="/socs_reviewer/">Index</a><br />
 		<img src="{% static 'images/uofg.png' %}" alt="University Logo" />
 	
 	</body>
