Chapter 5 and 6 completed

--- a/templates/reviewer/Allcourses.html
+++ b/templates/reviewer/Allcourses.html
@@ -4,12 +4,12 @@
 
 <html>
 	<head>
-		<title>Courses_Reviewer - AllCourses</title>
+		<title>University Of Glasgow All Courses_Review </title>
 	</head>
 	<body>
 		<h1>All Courses</h1>
 		<div>
-			This is is AllCourses page <br />
+			This is is All level Courses page <br />
 		<strong>{{ boldmessage }}</strong><br />
 		</div>
 		<div>
