--- a/templates/reviewer/courses.html
+++ b/templates/reviewer/courses.html
@@ -13,7 +13,7 @@
 				{% if Reviews %}
 					<ul>
 						{% for Review in Reviews %}
-						<li>Rating: {{ Review.Rating }} Price: {{ Review.Price }} Text: {{ Review.Text }}</</li>
+						<li>Rating: {{ Review.Rating }} , comment: {{ Review.Comment }}</</li>
 				
 						{% endfor %}
 					</ul>
