--- a/templates/reviewer/index.html
+++ b/templates/reviewer/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>Courses_Reviewer</h1>
 		<div>
-			hey there partner! <br />
+			hey there World Changers! <br />
 		<strong>{{ boldmessage }}</strong><br />
 		</div>
 		<div>
